// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RSVP block actions create RSVP 1`] = `
Object {
  "type": "@@MT/TICKETS/CREATE_RSVP",
}
`;

exports[`RSVP block actions delete RSVP 1`] = `
Object {
  "type": "@@MT/TICKETS/DELETE_RSVP",
}
`;

exports[`RSVP block actions set RSVP capacity 1`] = `
Object {
  "payload": Object {
    "capacity": 20,
  },
  "type": "@@MT/TICKETS/SET_RSVP_CAPACITY",
}
`;

exports[`RSVP block actions set RSVP description 1`] = `
Object {
  "payload": Object {
    "description": "description",
  },
  "type": "@@MT/TICKETS/SET_RSVP_DESCRIPTION",
}
`;

exports[`RSVP block actions set RSVP details 1`] = `
Object {
  "payload": Object {
    "capacity": 20,
    "description": "description",
    "endDate": "January 4, 2018",
    "endTime": "23:32",
    "notGoingResponses": true,
    "startDate": "January 1, 2018",
    "startTime": "12:34",
    "title": "title",
  },
  "type": "@@MT/TICKETS/SET_RSVP_DETAILS",
}
`;

exports[`RSVP block actions set RSVP end date 1`] = `
Object {
  "payload": Object {
    "endDate": "January 1, 2018",
  },
  "type": "@@MT/TICKETS/SET_RSVP_END_DATE",
}
`;

exports[`RSVP block actions set RSVP end time 1`] = `
Object {
  "payload": Object {
    "endTime": "12:34",
  },
  "type": "@@MT/TICKETS/SET_RSVP_END_TIME",
}
`;

exports[`RSVP block actions set RSVP has changes 1`] = `
Object {
  "payload": Object {
    "hasChanges": true,
  },
  "type": "@@MT/TICKETS/SET_RSVP_HAS_CHANGES",
}
`;

exports[`RSVP block actions set RSVP not going responses 1`] = `
Object {
  "payload": Object {
    "notGoingResponses": true,
  },
  "type": "@@MT/TICKETS/SET_RSVP_NOT_GOING_RESPONSES",
}
`;

exports[`RSVP block actions set RSVP settings open 1`] = `
Object {
  "payload": Object {
    "settingsOpen": true,
  },
  "type": "@@MT/TICKETS/SET_RSVP_SETTINGS_OPEN",
}
`;

exports[`RSVP block actions set RSVP start date 1`] = `
Object {
  "payload": Object {
    "startDate": "January 1, 2018",
  },
  "type": "@@MT/TICKETS/SET_RSVP_START_DATE",
}
`;

exports[`RSVP block actions set RSVP start time 1`] = `
Object {
  "payload": Object {
    "startTime": "12:34",
  },
  "type": "@@MT/TICKETS/SET_RSVP_START_TIME",
}
`;

exports[`RSVP block actions set RSVP temp capacity 1`] = `
Object {
  "payload": Object {
    "tempCapacity": 20,
  },
  "type": "@@MT/TICKETS/SET_RSVP_TEMP_CAPACITY",
}
`;

exports[`RSVP block actions set RSVP temp description 1`] = `
Object {
  "payload": Object {
    "tempDescription": "temp description",
  },
  "type": "@@MT/TICKETS/SET_RSVP_TEMP_DESCRIPTION",
}
`;

exports[`RSVP block actions set RSVP temp details 1`] = `
Object {
  "payload": Object {
    "tempCapacity": 20,
    "tempDescription": "description",
    "tempEndDate": "January 4, 2018",
    "tempEndTime": "23:32",
    "tempNotGoingResponses": true,
    "tempStartDate": "January 1, 2018",
    "tempStartTime": "12:34",
    "tempTitle": "title",
  },
  "type": "@@MT/TICKETS/SET_RSVP_TEMP_DETAILS",
}
`;

exports[`RSVP block actions set RSVP temp end date 1`] = `
Object {
  "payload": Object {
    "tempEndDate": "January 1, 2018",
  },
  "type": "@@MT/TICKETS/SET_RSVP_TEMP_END_DATE",
}
`;

exports[`RSVP block actions set RSVP temp end time 1`] = `
Object {
  "payload": Object {
    "tempEndTime": "12:34",
  },
  "type": "@@MT/TICKETS/SET_RSVP_TEMP_END_TIME",
}
`;

exports[`RSVP block actions set RSVP temp not going responses 1`] = `
Object {
  "payload": Object {
    "tempNotGoingResponses": true,
  },
  "type": "@@MT/TICKETS/SET_RSVP_TEMP_NOT_GOING_RESPONSES",
}
`;

exports[`RSVP block actions set RSVP temp start date 1`] = `
Object {
  "payload": Object {
    "tempStartDate": "January 1, 2018",
  },
  "type": "@@MT/TICKETS/SET_RSVP_TEMP_START_DATE",
}
`;

exports[`RSVP block actions set RSVP temp start time 1`] = `
Object {
  "payload": Object {
    "tempStartTime": "12:34",
  },
  "type": "@@MT/TICKETS/SET_RSVP_TEMP_START_TIME",
}
`;

exports[`RSVP block actions set RSVP temp title 1`] = `
Object {
  "payload": Object {
    "tempTitle": "temp title",
  },
  "type": "@@MT/TICKETS/SET_RSVP_TEMP_TITLE",
}
`;

exports[`RSVP block actions set RSVP title 1`] = `
Object {
  "payload": Object {
    "title": "title",
  },
  "type": "@@MT/TICKETS/SET_RSVP_TITLE",
}
`;
